<resources>
    <string name="app_name">BiteByte</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_welcome">Welcome!</string>
    <string name="intro_back">Good to see you back!</string>
    <string name="email">Email</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="password_less_then_8">Password At Least 8 Characters</string>
    <string name="password">Password</string>
    <string name="action_sign_in_short">SIGN IN</string>
    <string name="action_sign_up_short">SIGN UP</string>
    <string name="create_account">Don\'t Have Account? <b>Sign Up! </b></string>
    <string name="login_failed">Login Failed:  %1$s</string>
    <string name="fill_all_fields">You Must Fill All The Field!</string>
    <string name="register_failed">Register failed:  %1$s</string>
    <string name="name">Name</string>
    <string name="intro_hi">Hi!</string>
    <string name="intro_continue">Create Account To Continue!</string>
    <string name="have_account">Already Have Account? <b>Sign In! </b></string>
    <string name="onboard_headline">Enjoy cooking and eat your favorite foods healthier</string>
    <string name="lets_eat">Let\'s eat deliciously healthy!</string>
    <string name="next_instruction">Next, please answer a few questions to featuring tasty recipe of your needs</string>
    <string name="action_start_short">START</string>
    <string name="logged_out">Logged Out!</string>
    <string name="skip">Skip</string>
    <string name="action_create_account">CREATE ACCOUNT</string>
    <string name="input_profile">Profile</string>
    <string name="fill_data">Please fill your data</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="cm">Cm</string>
    <string name="health_concerns">Health Concerns</string>
    <string name="have_health_concerns">If you have certain health concern, please pick option(s) below</string>
    <string name="action_next">NEXT</string>
    <string name="obesity">Obesity</string>
    <string name="cancer">Cancer</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="stroke">Stroke</string>
    <string name="kidney">Kidney</string>
    <string name="diabetes">Diabetes</string>
    <string name="heart">Heart</string>
    <string name="liver">Liver</string>
    <string name="menu_type">Menu Type</string>
    <string name="type_menu">Please select food preference you currently consume</string>
    <string name="standart">Standard</string>
    <string name="standar_desc">All kinds of meal</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegetarian_desc">Without meat or fish</string>
    <string name="generating_menu">Generating Your Menu</string>
    <string name="Percentage">100%</string>
    <string name="generate_meal">The best meals is coming for you!</string>
    <string name="action_generate">GENERATE MY MENU</string>
    <string name="dont_have">I don’t have any of these</string>
    <string name="generating_failed">Generating Failed:  %1$s</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="user_avatar">User Image</string>
    <string name="profile">Profile</string>
    <string name="edit_account">Edit Account</string>
    <string name="edit_personal_data">Edit Personal Data</string>
    <string name="diet_history">Diet History</string>
    <string name="my_shopping_list">My Shopping List</string>
    <string name="total_item">Total Item</string>
    <string name="purchased">Purchased</string>
    <string name="unpurchased">Unpurchased</string>
    <string name="logout">Logout</string>
    <string name="others">Others</string>
    <string name="action_update">UPDATE</string>
    <string name="favorite_recipe">Favorite Recipe</string>
    <string name="most_favorite_recipe">Your most Favorite Recipe!</string>
    <string name="mark_favorite_recipe">Let’s mark some recipes!</string>
    <string name="recipe_description">Greatest recipe with salty and sweet taste in your mouth! Dont forget to make this recipe because you will like it trust me! You have to boil all the ingredients and follow the step slowly!</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="old_new_password_same">Old and New Password can’t be same</string>
    <string name="edit_account_failed">Edit Account Failed:  %1$s</string>
    <string name="for_you">For You</string>
    <string name="based_on_diet">Food Recommendation based on your diet</string>
    <string name="failed_to_initialized_camera">Failed To Initialized Camera</string>
    <string name="failed_to_take_picture">Failed To Take Picture</string>
    <string name="camera_permission_required">Camera Permission Required</string>
    <string name="choose_picture">Choose A Picture</string>
    <string name="hi_user_name">Hi, %1$s!</string>
    <string name="healthy_recipe">Start a day with healthy recipe!</string>
    <string name="toady_menu">Today\'s Menu</string>
    <string name="see_all">See all</string>
    <string name="breakfast_menu">Breakfast Menu</string>
    <string name="recommendation_menu">Recommendation Menu</string>
    <string name="couldnt_find">Sorry, the recipe you were looking for couldn\'t be found</string>
    <string name="find_your_menu">Find Your Menu</string>
    <string name="success_changin_photo">Photo Changed</string>
    <string name="changing_photo">Changing Photo...</string>
    <string name="upload_image_error">"Changing Image Error: %1$s"</string>
    <string name="add_image_first">Add Image First!</string>
    <string name="activity">Activity</string>
    <string name="activity_level">Please select your activity level</string>
    <string name="preference">Preference</string>
    <string name="sedentary">Sedentary</string>
    <string name="sedentary_desc">Little or no exercise/desk job</string>
    <string name="light">Light</string>
    <string name="light_desc">Light exercise/sports 1 – 3 days per week</string>
    <string name="moderate">Moderate</string>
    <string name="moderate_desc">Moderate exercise/sports 3 – 5 days per week</string>
    <string name="active">Active</string>
    <string name="active_desc">Hard exercise/sports 3 – 5 days per week</string>
    <string name="very_active">Very Active</string>
    <string name="very_active_desc">Hard exercise/sports daily and/or a physical job</string>
    <string name="description">Description</string>
    <string name="instruction">Instruction</string>
    <string name="ingredients">Ingredients: </string>
    <string name="steps">Steps:</string>
    <string name="add_to_shopping_list">Add to Shopping List</string>
    <string name="get_premium">Get Premium</string>
    <string name="headline_premium">Start Your Changes \nToday!</string>
    <string name="personalized_diet_plan">Personalized Diet Plan</string>
    <string name="personalized_desc">Get your own diet menu based on your daily calorie</string>
    <string name="diet_choices">Diet Choices</string>
    <string name="diet_choices_desc">Choose diet type you desire</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_desc">Get diet notifications to remind you and keep your goals</string>
    <string name="exclusive_menu">Exclusive Menu</string>
    <string name="exclusive_menu_desc">Get access to dozens of special menu just for you</string>
    <string name="monthly">Monthly</string>
    <string name="monthly_price">Rp50.000,00</string>
    <string name="per_month">per month</string>
    <string name="yearly">Yearly</string>
    <string name="per_year">per year</string>
    <string name="yearly_price">Rp400.000,00</string>
    <string name="discount_yearly_price"><Strike>Rp600.000,00</Strike></string>
    <string name="action_continue">CONTINUE</string>
    <string name="action_get_premium">Get Premium</string>
    <string name="ingredients_to_make">Here are the ingredients to make your meal</string>
    <string name="shopping_list">Shopping List</string>
    <string name="action_clear_all">Clear All</string>
    <string name="ni_list_added">No list added yet</string>
    <string name="protein">Protein</string>
    <string name="sugar">Sugar</string>
    <string name="sodium">Sodium</string>
    <string name="fat">Fat</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="delete_shopping_list">Delete From Shopping List</string>
    <string name="clear_all_shopping_list">Clear All Shopping List</string>
</resources>