<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_theme_secondary"
    android:padding="16dp"
    tools:context=".ui.question.QuestionStartFragment">


    <TextView
        android:id="@+id/tv_headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="26dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@id/btn_start"
        android:textColor="@color/black"
        android:text="@string/lets_eat"
        android:textSize="56sp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge" />

    <TextView
        android:id="@+id/tv_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_headline"
        android:layout_marginStart="24dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/next_instruction"
        android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_start_short"
        android:layout_marginStart="24dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_instruction"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>