<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_theme_primary"
    android:padding="16dp"
    tools:context=".ui.onBoard.onBoardingFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/onboard_img"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_onboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/onboard_headline"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        tools:layout_editor_absoluteX="40dp" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in_short"
        android:layout_marginStart="24dp"
        android:textColor="@color/color_theme_primary"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:backgroundTint="@color/color_theme_secondary"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_up"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_create_account"
        android:layout_marginStart="24dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/button_border"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>